; ModuleID = '/home/carl/AnghaBench/libgit2/tests/perf/extr_helper__perf__do_merge.c_perf__do_merge.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/perf/extr_helper__perf__do_merge.c_perf__do_merge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32 }
%struct.TYPE_8__ = type { %struct.TYPE_9__ }

@GIT_CHECKOUT_OPTIONS_INIT = common dso_local global %struct.TYPE_9__ zeroinitializer, align 4
@GIT_CLONE_OPTIONS_INIT = common dso_local global %struct.TYPE_8__ zeroinitializer, align 4
@GIT_MERGE_OPTIONS_INIT = common dso_local global i32 0, align 4
@PERF_TIMER_INIT = common dso_local global i32 0, align 4
@GIT_CHECKOUT_SAFE = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"A\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"B\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"%s: clone\00", align 1
@.str.3 = private unnamed_addr constant [13 x i8] c"%s: checkout\00", align 1
@.str.4 = private unnamed_addr constant [10 x i8] c"%s: merge\00", align 1
@.str.5 = private unnamed_addr constant [10 x i8] c"%s: total\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @perf__do_merge(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_9__, align 4
  %10 = alloca %struct.TYPE_8__, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca [1 x i32*], align 8
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %23 = bitcast %struct.TYPE_9__* %9 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %23, i8* align 4 bitcast (%struct.TYPE_9__* @GIT_CHECKOUT_OPTIONS_INIT to i8*), i64 4, i1 false)
  %24 = bitcast %struct.TYPE_8__* %10 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %24, i8* align 4 bitcast (%struct.TYPE_8__* @GIT_CLONE_OPTIONS_INIT to i8*), i64 4, i1 false)
  %25 = load i32, i32* @GIT_MERGE_OPTIONS_INIT, align 4
  store i32 %25, i32* %11, align 4
  store i32* null, i32** %14, align 8
  store i32* null, i32** %15, align 8
  store i32* null, i32** %16, align 8
  store i32* null, i32** %17, align 8
  %26 = bitcast [1 x i32*]* %18 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %26, i8 0, i64 8, i1 false)
  %27 = load i32, i32* @PERF_TIMER_INIT, align 4
  store i32 %27, i32* %19, align 4
  %28 = load i32, i32* @PERF_TIMER_INIT, align 4
  store i32 %28, i32* %20, align 4
  %29 = load i32, i32* @PERF_TIMER_INIT, align 4
  store i32 %29, i32* %21, align 4
  %30 = load i32, i32* @PERF_TIMER_INIT, align 4
  store i32 %30, i32* %22, align 4
  %31 = call i32 @perf__timer__start(i32* %19)
  %32 = load i32, i32* @GIT_CHECKOUT_SAFE, align 4
  %33 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 0
  store i32 %32, i32* %33, align 4
  %34 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 0
  %35 = bitcast %struct.TYPE_9__* %34 to i8*
  %36 = bitcast %struct.TYPE_9__* %9 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %35, i8* align 4 %36, i64 4, i1 false)
  %37 = call i32 @perf__timer__start(i32* %20)
  %38 = load i8*, i8** %5, align 8
  %39 = load i8*, i8** %6, align 8
  %40 = call i32 @git_clone(i32* @g_repo, i8* %38, i8* %39, %struct.TYPE_8__* %10)
  %41 = call i32 @cl_git_pass(i32 %40)
  %42 = call i32 @perf__timer__stop(i32* %20)
  %43 = load i8*, i8** %7, align 8
  %44 = call i32 @git_oid_fromstr(i32* %12, i8* %43)
  %45 = load i32, i32* @g_repo, align 4
  %46 = call i32 @git_commit_lookup(i32** %16, i32 %45, i32* %12)
  %47 = call i32 @cl_git_pass(i32 %46)
  %48 = load i32, i32* @g_repo, align 4
  %49 = load i32*, i32** %16, align 8
  %50 = call i32 @git_branch_create(i32** %14, i32 %48, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %49, i32 0)
  %51 = call i32 @cl_git_pass(i32 %50)
  %52 = call i32 @perf__timer__start(i32* %21)
  %53 = load i32, i32* @g_repo, align 4
  %54 = load i32*, i32** %16, align 8
  %55 = call i32 @git_checkout_tree(i32 %53, i32* %54, %struct.TYPE_9__* %9)
  %56 = call i32 @cl_git_pass(i32 %55)
  %57 = call i32 @perf__timer__stop(i32* %21)
  %58 = load i32, i32* @g_repo, align 4
  %59 = load i32*, i32** %14, align 8
  %60 = call i32 @git_reference_name(i32* %59)
  %61 = call i32 @git_repository_set_head(i32 %58, i32 %60)
  %62 = call i32 @cl_git_pass(i32 %61)
  %63 = load i8*, i8** %8, align 8
  %64 = call i32 @git_oid_fromstr(i32* %13, i8* %63)
  %65 = load i32, i32* @g_repo, align 4
  %66 = call i32 @git_commit_lookup(i32** %17, i32 %65, i32* %13)
  %67 = call i32 @cl_git_pass(i32 %66)
  %68 = load i32, i32* @g_repo, align 4
  %69 = load i32*, i32** %17, align 8
  %70 = call i32 @git_branch_create(i32** %15, i32 %68, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32* %69, i32 0)
  %71 = call i32 @cl_git_pass(i32 %70)
  %72 = getelementptr inbounds [1 x i32*], [1 x i32*]* %18, i64 0, i64 0
  %73 = load i32, i32* @g_repo, align 4
  %74 = call i32 @git_annotated_commit_lookup(i32** %72, i32 %73, i32* %13)
  %75 = call i32 @cl_git_pass(i32 %74)
  %76 = call i32 @perf__timer__start(i32* %22)
  %77 = load i32, i32* @g_repo, align 4
  %78 = getelementptr inbounds [1 x i32*], [1 x i32*]* %18, i64 0, i64 0
  %79 = call i32 @git_merge(i32 %77, i32** %78, i32 1, i32* %11, %struct.TYPE_9__* %9)
  %80 = call i32 @cl_git_pass(i32 %79)
  %81 = call i32 @perf__timer__stop(i32* %22)
  %82 = load i32*, i32** %14, align 8
  %83 = call i32 @git_reference_free(i32* %82)
  %84 = load i32*, i32** %15, align 8
  %85 = call i32 @git_reference_free(i32* %84)
  %86 = load i32*, i32** %16, align 8
  %87 = call i32 @git_commit_free(i32* %86)
  %88 = load i32*, i32** %17, align 8
  %89 = call i32 @git_commit_free(i32* %88)
  %90 = getelementptr inbounds [1 x i32*], [1 x i32*]* %18, i64 0, i64 0
  %91 = load i32*, i32** %90, align 8
  %92 = call i32 @git_annotated_commit_free(i32* %91)
  %93 = load i32, i32* @g_repo, align 4
  %94 = call i32 @git_repository_free(i32 %93)
  %95 = call i32 @perf__timer__stop(i32* %19)
  %96 = load i8*, i8** %6, align 8
  %97 = call i32 @perf__timer__report(i32* %20, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i8* %96)
  %98 = load i8*, i8** %6, align 8
  %99 = call i32 @perf__timer__report(i32* %21, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0), i8* %98)
  %100 = load i8*, i8** %6, align 8
  %101 = call i32 @perf__timer__report(i32* %22, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0), i8* %100)
  %102 = load i8*, i8** %6, align 8
  %103 = call i32 @perf__timer__report(i32* %19, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.5, i64 0, i64 0), i8* %102)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @perf__timer__start(i32*) #2

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_clone(i32*, i8*, i8*, %struct.TYPE_8__*) #2

declare dso_local i32 @perf__timer__stop(i32*) #2

declare dso_local i32 @git_oid_fromstr(i32*, i8*) #2

declare dso_local i32 @git_commit_lookup(i32**, i32, i32*) #2

declare dso_local i32 @git_branch_create(i32**, i32, i8*, i32*, i32) #2

declare dso_local i32 @git_checkout_tree(i32, i32*, %struct.TYPE_9__*) #2

declare dso_local i32 @git_repository_set_head(i32, i32) #2

declare dso_local i32 @git_reference_name(i32*) #2

declare dso_local i32 @git_annotated_commit_lookup(i32**, i32, i32*) #2

declare dso_local i32 @git_merge(i32, i32**, i32, i32*, %struct.TYPE_9__*) #2

declare dso_local i32 @git_reference_free(i32*) #2

declare dso_local i32 @git_commit_free(i32*) #2

declare dso_local i32 @git_annotated_commit_free(i32*) #2

declare dso_local i32 @git_repository_free(i32) #2

declare dso_local i32 @perf__timer__report(i32*, i8*, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
